--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,5 @@ springdoc:
   default-produces-media-type: application/json
 server:
   servlet:
-    context-path: /api/v1/
+    context-path: /api/v1
 #  port: 8181
